# termo-solver-web

./: .gitmodules  Cargo.toml  README.md  index.html
src/: BlockPalette.rs  ColorPalette.rs  LetterCard.rs  Square.rs  SquareLine.rs  TermoGame.rs  app.rs  main.rs  routes.rs  termo.rs
src/components/: block_card.rs  clickable.rs  column_pallete.rs  controller.rs  mod.rs  square.rs  square_line.rs  status_pallete.rs
src/components/data/: block.rs  color.rs  entry.rs  mod.rs
src/components/generic/: center.rs  clickable.rs  mod.rs  switch.rs  window_event_listener.rs
src/ctx/: color_ctx.rs  mod.rs
styles/: styles.css
