[package]
name = "termo-solver-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
float-ord = "0.3.2"
unroll = "0.1.5"
yew = { version="0.19.3", features=[] }
yew-router = { version="0.16", features=[] }
wasm-bindgen-futures = "0.4.30"
web-sys = { version="0.3.56", features=["console"] }